syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "EventProto";

package com.donghoonkhan.grpc.proto;

message EventRequest {
    string sourceId = 1;
    string eventId = 2;
}

message EventResponse {
    string result = 1;
}

service NewdataService {
    rpc unaryEvent(EventRequest) returns (EventResponse) {}
    rpc serverStreamingEvent(EventRequest) returns (stream EventResponse) {}
    rpc clientStreamingEvent(stream EventRequest) returns (EventResponse) {}
    rpc biStreamingEvent(stream EventRequest) returns (stream EventResponse) {}
}
